@@ -3173,7 +3173,8 @@ structure representations"
                "*CONTROL-STACK-START*" "*CONTROL-STACK-END*"
                "CONTROL-STACK-POINTER-VALID-P"
                "DYNAMIC-SPACE-START" "DYNAMIC-SPACE-END"
-               #!+gencgc "MAX-DYNAMIC-SPACE-END"
+               #!+gencgc("DEFAULT-DYNAMIC-SPACE-SIZE"
+                         "MAX-DYNAMIC-SPACE-END")
                #!-gencgc("DYNAMIC-0-SPACE-START"
                          "DYNAMIC-0-SPACE-END"
                          "DYNAMIC-1-SPACE-START"
