@@ -122,7 +122,8 @@
   (defconstant static-space-end          #x111ff000)
 
   (defconstant dynamic-space-start       #x30000000)
-  (defconstant dynamic-space-end         (!configure-dynamic-space-end)))
+  (defconstant default-dynamic-space-size
+    (or (!read-dynamic-space-size) (expt 2 29))))
 
 #!+(and sunos cheneygc) ; might as well start by trying the same numbers
 (progn
@@ -153,7 +154,8 @@
   (defconstant static-space-end          #x111ff000)
 
   (defconstant dynamic-space-start       #x30000000)
-  (defconstant dynamic-space-end         (!configure-dynamic-space-end)))
+  (defconstant default-dynamic-space-size
+    (or (!read-dynamic-space-size) (expt 2 29))))
 
 #!+netbsd ; Need a gap at 0x4000000 for shared libraries
 (progn
